# google-search-mcp

./: README.md  TEST_REPORT.md  TEST_REPORT_FULL.md  pyproject.toml  test_all.py  test_all_log.txt  test_feeds.py  test_feeds_log.txt  test_lmstudio_integration.py  test_lmstudio_results.md  test_lmstudio_results_raw.txt
src/google_search_mcp/: __init__.py  server.py
